--- a/map_view.html
+++ b/map_view.html
@@ -189,7 +189,7 @@
 			</p>
 		</div> <br>
 		<div id="line-chart"></div> <br>
-		<div id="line-text-below" hidden="hidden">
+		<div id="line-text-race" hidden="hidden">
 			<p>
 				On the left hand side, you can see the total number of stops for each ethnicity in California as a function of the year. Similarly on the right,
 				you can see the total number of stops by ethnicity for Texas. We can see that the number of police stops for the time range 2009-2016 remains quite <b>constant
@@ -201,6 +201,15 @@
 				to traffic stops being done with a different police authority instead.
 				For Texas, the number of hispanics stopped remains quite constant, but we see a steady decrease of the number of whites stopped from 2009-2015 where
 				it remains constant at around 800k.
+			</p>
+		</div>
+
+		<div id="line-text-gender" hidden="hidden">
+			<p>
+				For California on the left, we can see than from 2009 to 2010 there was an increase of 1.5M stops for men and aroung 700k for women. Then we see a slight decline in
+				stops up until 2015 for both genders, with a bigger drop in 2016 of around 1M and 700k for men and women respectively.
+				For Texas, the number of stops remain quite constant from 2009 to 2016 for both genders, even though we see a slight decrease for men starting in 2013 that amounts to 
+				about 200k less stops.
 			</p>
 		</div>
 	</section>
